# voxelMMO

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  vcpkg.json
client/: index.html  jsconfig.json  package-lock.json  package.json  vite.config.js  vitest.config.js
client/src/: Chunk.js  ChunkManager.js  ChunkRegistry.js  DebugVisualizer.js  EntityCatalog.js  EntityDeserializer.js  EntityRegistry.js  EntityTypeDeserializers.js  GameClient.js  GameContext.js  GameState.js  NetworkProtocol.js  RenderManager.js  ToolCatalog.js  VoxelTextures.js  VoxelTypes.js  main.js  types.js  utils.js
client/src/components/: BaseComponent.js  ComponentBits.js  DynamicPositionComponent.js  GoblinBehaviorComponent.js  HealthComponent.js  SheepBehaviorComponent.js  ToolComponent.js
client/src/controllers/: BaseController.js  ControllerManager.js  InputModeManager.js  KeyboardController.js  TouchController.js
client/src/entities/: BaseEntity.js  GhostPlayerEntityDeserializer.js  GoblinEntity.js  LivingEntity.js  PlayerEntity.js  PlayerEntityDeserializer.js  SheepEntity.js  SheepEntityDeserializer.js
client/src/systems/: ChunkMembershipSystem.js  PhysicsPredictionSystem.js  VoxelHighlightSystem.js
client/src/tools/: CreateVoxelTool.js  DestroyVoxelTool.js  HandTool.js  SelectVoxelTool.js  Tool.js  VoxelItem.js  VoxelTool.js
client/src/ui/: BulkVoxelsSelection.js  DeathScreen.js  Hotbar.js  ToolContext.js  VoxelHighlight.js
client/src/voxels/: BaseVoxel.js  BasicVoxel.js  BricksVoxel.js  DirtVoxel.js  GoblinBedVoxel.js  GrassVoxel.js  LadderVoxel.js  MudVoxel.js  PlanksVoxel.js  SlimeVoxel.js  StoneVoxel.js  index.js
docs/: network-protocol.md  saves.md  wire-format.md
nginx/: nginx.conf
scripts/: build.sh  install.sh  start.sh  test.sh
server/: main.cpp
server/common/: BufWriter.hpp  ChunkState.hpp  EntityCatalog.cpp  EntityCatalog.hpp  EntityType.hpp  GatewayInfo.hpp  MessageTypes.hpp  NetworkProtocol.hpp  SafeBufWriter.hpp  ToolCatalog.cpp  ToolCatalog.hpp  Types.hpp  VoxelCatalog.cpp  VoxelCatalog.hpp  VoxelPhysicProps.hpp  VoxelPhysicType.hpp  VoxelTypes.hpp  WatchedChunksTracker.hpp
server/game/: Chunk.cpp  Chunk.hpp  ChunkRegistry.cpp  ChunkRegistry.hpp  ChunkSerializer.cpp  ChunkSerializer.hpp  EntitySerializer.cpp  EntitySerializer.hpp  EntityTypeSerializers.cpp  EntityTypeSerializers.hpp  GameEngine.cpp  GameEngine.hpp  GatewayInfo.hpp  Physics.cpp  Physics.hpp  SaveSystem.cpp  SaveSystem.hpp  WorldChunk.cpp  WorldChunk.hpp  WorldGenerator.cpp  WorldGenerator.hpp
server/game/components/: BoundingBoxComponent.hpp  ChunkMemberComponent.hpp  ChunkMembershipComponent.hpp  DirtyComponent.hpp  DisconnectedPlayerComponent.hpp  DynamicPositionComponent.hpp  EntityTypeComponent.hpp  GlobalEntityIdComponent.hpp  GoblinBehaviorComponent.hpp  GroundContactComponent.cpp  GroundContactComponent.hpp  HealthComponent.hpp  InputComponent.hpp  JumpComponent.hpp  PendingChunkChangeComponent.hpp  PendingCreateComponent.hpp  PendingDeleteComponent.hpp  PhysicsModeComponent.hpp  PlayerComponent.hpp  PositionComponent.hpp  SheepBehaviorComponent.hpp  ToolComponent.hpp  VelocityComponent.hpp  WalkComponent.cpp  WalkComponent.hpp
server/game/entities/: BaseEntity.hpp  EntityFactory.cpp  EntityFactory.hpp  GhostPlayerEntity.cpp  GhostPlayerEntity.hpp  GoblinEntity.cpp  GoblinEntity.hpp  PlayerEntity.cpp  PlayerEntity.hpp  SheepEntity.cpp  SheepEntity.hpp
server/game/systems/: ChunkMembershipSystem.cpp  ChunkMembershipSystem.hpp  CombatSystem.cpp  CombatSystem.hpp  DisconnectedPlayerSystem.cpp  DisconnectedPlayerSystem.hpp  EntityStateSystem.cpp  EntityStateSystem.hpp  GoblinAISystem.cpp  GoblinAISystem.hpp  HealthSystem.cpp  HealthSystem.hpp  InputSystem.cpp  InputSystem.hpp  JumpSystem.cpp  JumpSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  SheepAISystem.cpp  SheepAISystem.hpp
server/game/voxels/: GoblinBedVoxel.cpp  GoblinBedVoxel.hpp
server/gateway/: ChunkState.cpp  ChunkState.hpp  GatewayEngine.cpp  GatewayEngine.hpp  PlayerInfo.hpp  StateManager.cpp  StateManager.hpp
tests/client/: physics.test.js  protocol_fixtures.test.js  serialization.test.js
tests/protocol_fixtures/: FixtureLoader.js
tests/protocol_fixtures/client_to_server/input/: input_all_buttons.hex  input_complex.hex  input_forward.hex  input_jump.hex  input_yaw_pitch.hex  input_zero.hex
tests/protocol_fixtures/client_to_server/join/: join_ghost.hex  join_player.hex  join_sheep.hex
tests/protocol_fixtures/server_to_client/chunk_state/: snapshot_compressed_header.hex  tick_delta_header.hex
tests/protocol_fixtures/server_to_client/self_entity/: self_entity_max.hex  self_entity_sample.hex  self_entity_zero.hex
tests/server/: TEST_PLAN.md  TestUtils.cpp  TestUtils.hpp  debug_test.cpp  test_chunk_streaming.cpp  test_components.cpp  test_game_engine.cpp  test_network_protocol.cpp  test_physics.cpp  test_protocol_cross_platform.cpp  test_save_integration.cpp  test_save_system.cpp  test_serialization.cpp  test_world_gen.cpp
